# ChangeLog for dev-db/libpq
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/libpq/Attic/ChangeLog,v 1.13 2005/07/14 19:26:04 killerfox Exp $

  14 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org> libpq-8.0.1.ebuild:
  Stable on hppa.

  12 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> libpq-8.0.1.ebuild:
  Stable on sparc

  09 Jul 2005; Markus Rothe <corsair@gentoo.org> libpq-8.0.1.ebuild:
  Stable on ppc64

  06 Jul 2005; Masatomo Nakano <nakano@gentoo.org> libpq-8.0.1.ebuild:
  Marked stable on x86.

  06 Jul 2005; Masatomo Nakano <nakano@gentoo.org> libpq-7.4.8.ebuild:
  Marked stable on x86.

  03 Jul 2005; Masatomo Nakano <nakano@gentoo.org> libpq-7.3.10.ebuild:
  Marked stable on x86.

  02 Jul 2005; Masatomo Nakano <nakano@gentoo.org> libpq-7.3.10.ebuild,
  libpq-7.4.8.ebuild, libpq-8.0.1.ebuild, libpq-8.0.3.ebuild:
  Fixed wrong symlink problem. (#97684).

  19 May 2005; MATSUU Takuto <matsuu@gentoo.org> libpq-7.3.10.ebuild,
  libpq-7.4.8.ebuild, libpq-8.0.1.ebuild, libpq-8.0.3.ebuild:
  Fixed build errors, Bug 93103.

*libpq-8.0.1 (16 May 2005)
*libpq-7.4.8 (16 May 2005)
*libpq-7.3.10 (16 May 2005)

  16 May 2005; Masatomo Nakano <nakano@gentoo.org>
  -files/libpq-3.2-gentoo.patch, -files/libpq-4.0-gentoo.patch,
  +files/libpq-7.3.10-gentoo.patch, +files/libpq-7.4.8-gentoo.patch,
  +files/libpq-8.0.1-gentoo.patch, -libpq-3.2.ebuild, -libpq-4.0.ebuild,
  +libpq-7.3.10.ebuild, +libpq-7.4.8.ebuild, +libpq-8.0.1.ebuild:
  Changed pacakge name to PostgreSQL version base.

*libpq-8.0.3 (15 May 2005)

  15 May 2005; MATSUU Takuto <matsuu@gentoo.org>
  +files/libpq-8.0.3-gentoo.patch, +libpq-8.0.3.ebuild:
  Version bumped.
  Clean up ebuild.

  09 May 2005; Masatomo Nakano <nakano@gentoo.org> libpq-3.2.ebuild,
  libpq-4.0.ebuild:
  Added missing include files.

  08 May 2005; Masatomo Nakano <nakano@gentoo.org> libpq-3.2.ebuild,
  libpq-4.0.ebuild: