@@ -1,4 +1,0 @@
-MD5 b8f8edce5b29bcf785251693c6225885 postgresql-base-8.0.1.tar.bz2 7798118
-MD5 130474770b88fd059c2dff457fb06b0a postgresql-opt-8.0.1.tar.bz2 133466
-MD5 f51624e70b9fca4ebd6bb56ba8587b97 postgresql-docs-8.0.1.tar.bz2 2198650
-MD5 1d410cfb38253675fee36c8f9ee655e2 hier-Pg8.0.1-0.5.4.diff.gz 30662
