@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/postgresql/Attic/ChangeLog,v 1.226 2005/07/14 19:31:25 killerfox Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/postgresql/Attic/ChangeLog,v 1.227 2005/07/20 18:13:46 nakano Exp $
+
+  20 Jul 2005; Masatomo Nakano <nakano@gentoo.org>
+  -postgresql-8.0.1-r2.ebuild, postgresql-8.0.3.ebuild:
+  Marked stable on x86 and tidy up.
 
   14 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org>
   postgresql-8.0.1-r4.ebuild:
